<resources>
    <string name="app_name">PlanIt</string>

    <!-- Panel powitalny -->
    <string name="welcome_text">Plan ahead</string>
    <string name="begin_button">Zaczynamy!</string>

    <!-- Panel logowania -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="btn_forgotten_password">Resetuj hasło</string>
    <string name="btn_login">Zaloguj się</string>
    <string name="btn_new_account">Nie masz konta? Załóż je!</string>

    <!-- Reset Hasła -->
    <string name="btn_reset_password">Resetuj hasło</string>
    <string name="reset_password_email">Email</string>
    <string name="reset_password_text">Podaj adres email konta, którego hasło chcesz resetować</string>

    <!-- Panel rejestracji -->
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Hasło</string>
    <string name="hint_register_password_repeat">Powtórz hasło</string>
    <string name="btn_register">Zarejestruj się</string>
    <string name="btn_account_exists">Masz już konto? Zaloguj się!</string>

    <!-- Walidacja email, hasła etc. -->
    <string name="missing_inputs">Proszę uzupełnić wszystkie pola</string>
    <string name="password_too_short">Proszę podać hasło o długości min. 8 znaków</string>
    <string name="passwords_not_matching">Proszę powtórzyć hasło</string>
    <string name="invalid_email">Proszę podać poprawny adres email</string>
    <string name="invalid_data">Niepoprawne hasło lub adres email</string>
    <string name="login_success">Zalogowano pomyślnie</string>
    <string name="register_success">Zarejestrowano pomyślnie</string>
    <string name="register_failure">Wystąpił błąd podczas rejestracji</string>

    <!-- Workspaces -->
    <string name="workspaces_title">Twoje projekty</string>
    <string name="add_workspace">Utwórz projekt</string>
    <string name="workspace_type">Przeznaczenie</string>
    <string name="workspace_create">Utwórz projekt</string>
    <string-array name="workspace_types">
        <item>Biznes</item>
        <item>Edukacja</item>
        <item>Hobby</item>
        <item>Działalność charytatywna</item>
    </string-array>
    <string-array name="workspace_roles">
        <item>Użytkownik</item>
        <item>Redaktor</item>
    </string-array>

    <!-- Edycja konta użytkownika -->
    <string-array name="countries_array">
        <item>Polska</item>
        <item>Niemcy</item>
        <item>Czechy</item>
        <item>Australia</item>
        <item>USA</item>
        <item>Brazylia</item>
        <item>Japonia</item>
        <item>Zanzibar to nie kraj debilko</item>
    </string-array>

    <string-array name="roles_array">
        <item>Manager</item>
        <item>Helper</item>
        <item>Wolontariusz</item>
        <item>Szarl Leklerk</item>
    </string-array>

    <string-array name="platforms_array">
        <item>Facebook</item>
        <item>Instagram</item>
        <item>OnlySimps</item>
        <item>DontWatchPornHub</item>
    </string-array>

    <string-array name="types_array">
        <item>Tekst</item>
        <item>Grafika</item>
        <item>Wideo</item>
        <item>Reels</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>