<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/sm3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/planit_purple_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/planit_purple_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/planit_purple_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/et_email2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email2" />

    <TextView
        android:id="@+id/btn_forgotten_password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgotten_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        android:backgroundTint="@color/planit_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgotten_password" />

    <TextView
        android:id="@+id/tv_registeract"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_account"
        android:textAlignment="center"
        android:textColor="@color/planit_yellow"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentDetails"
        class="com.example.planit.PasswordResetFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_password_reset" />

</androidx.constraintlayout.widget.ConstraintLayout>