<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordResetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/planit_yellow_gradient"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="X"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_text"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close" />

        <EditText
            android:id="@+id/tv_emailreset"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:hint="@string/reset_password_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_emailreset" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>