<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/sm2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/planit_black_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/planit_black_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/planit_black_gradient"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_begin"
        android:layout_width="212dp"
        android:layout_height="64dp"
        android:layout_margin="128px"
        android:backgroundTint="@color/planit_yellow"
        android:text="@string/begin_button"
        android:textSize="48px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="64px"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px"
        android:layout_marginLeft="64px"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>