<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkspacesActivity"
    android:background="@color/black">

    <View
        android:id="@+id/view0"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/planit_purple_gradient"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/planit_yellow_gradient"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/fragmentMenu"/>

    <!-- Menu -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="-174dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_menu_home"
        app:layout_constraintStart_toEndOf="@+id/btn_menu_settings"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_workspaces_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="364dp"
            android:text="@string/add_workspace"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Nazwa"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_workspaces_title" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:hint="Nazwa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/workspace_type"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <Button
            android:id="@+id/btn_create_workspace"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/planit_purple"
            android:text="@string/workspace_create"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentMenu"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/planit_purple"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_menu_settings"
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/planit_yellow"
            android:scaleType="centerCrop"
            android:src="@drawable/settings_black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_menu_calendar"
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/planit_yellow"
            android:scaleType="centerCrop"
            android:src="@drawable/calendar_black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_menu_home"
            app:layout_constraintStart_toEndOf="@+id/btn_menu_settings"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_menu_home"
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/planit_yellow"
            android:scaleType="centerCrop"
            android:src="@drawable/home_black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_menu_logout"
            app:layout_constraintStart_toEndOf="@+id/btn_menu_calendar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_menu_logout"
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/planit_yellow"
            android:scaleType="centerCrop"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logout_black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>